add zaxpy test, refactor

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,11 +2,10 @@ macro(add_gpublas_test name)
   add_executable(${name})
   target_gtensor_sources(${name} PRIVATE ${name}.cxx)
   target_link_libraries(${name} gtensor::gtensor gpublas GTest::Main)
-  #gtest_add_tests(TARGET ${name})
   gtest_discover_tests(${name})
   if (GTENSOR_TEST_DEBUG)
     target_compile_definitions(${name} PRIVATE GTENSOR_TEST_DEBUG)
   endif()
 endmacro()
 
-add_gpublas_test(test_daxpy)
+add_gpublas_test(test_axpy)
