--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,14 @@ target_gtensor_sources(gpublas PRIVATE src/gpublas.cxx)
 target_link_libraries(gpublas gtensor::gtensor)
 target_include_directories(gpublas PUBLIC include/)
 
+add_library(gpufft)
+target_gtensor_sources(gpufft PRIVATE src/gpufft.cxx)
+target_link_libraries(gpufft gtensor::gtensor)
+target_include_directories(gpufft PUBLIC include/)
+
 if (${GTENSOR_DEVICE} STREQUAL "cuda")
   target_link_libraries(gpublas "cublas")
+  target_link_libraries(gpufft "cublas")
 elseif (${GTENSOR_DEVICE} STREQUAL "hip")
   add_library(rocblas INTERFACE IMPORTED)
   target_link_libraries(rocblas INTERFACE "/opt/rocm/lib/librocblas.so")
@@ -24,10 +30,15 @@ elseif (${GTENSOR_DEVICE} STREQUAL "hip")
   add_library(rocsolver INTERFACE IMPORTED)
   target_link_libraries(rocsolver INTERFACE "/opt/rocm/lib/librocsolver.so")
   target_include_directories(rocsolver INTERFACE "/opt/rocm/include")
+  add_library(rocfft INTERFACE IMPORTED)
+  target_link_libraries(rocfft INTERFACE "/opt/rocm/lib/librocfft.so")
+  target_include_directories(rocfft INTERFACE "/opt/rocm/include")
 
   target_link_libraries(gpublas rocblas rocsolver)
+  target_link_libraries(gpublas rocfft)
 elseif (${GTENSOR_DEVICE} STREQUAL "sycl")
   target_link_libraries(gpublas "onemkl")
+  target_link_libraries(gpufft "onemkl")
 endif()
 
 include(CTest)
