fft lib working on cuda/rocm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ target_include_directories(gpufft PUBLIC include/)
 
 if (${GTENSOR_DEVICE} STREQUAL "cuda")
   target_link_libraries(gpublas "cublas")
-  target_link_libraries(gpufft "cublas")
+  target_link_libraries(gpufft "cufft")
 elseif (${GTENSOR_DEVICE} STREQUAL "hip")
   add_library(rocblas INTERFACE IMPORTED)
   target_link_libraries(rocblas INTERFACE "/opt/rocm/lib/librocblas.so")
@@ -35,7 +35,7 @@ elseif (${GTENSOR_DEVICE} STREQUAL "hip")
   target_include_directories(rocfft INTERFACE "/opt/rocm/include")
 
   target_link_libraries(gpublas rocblas rocsolver)
-  target_link_libraries(gpublas rocfft)
+  target_link_libraries(gpufft rocfft)
 elseif (${GTENSOR_DEVICE} STREQUAL "sycl")
   target_link_libraries(gpublas "onemkl")
   target_link_libraries(gpufft "onemkl")
